# BezierLightLTC

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yaml  ubuntu.yaml  windows.yaml
cmake/: FindGLFW3.cmake  FindGLM.cmake
shaders/: bezierLight.frag  bezierLight.vert  floorLTC.frag  floorLTC.vert
src/: CMakeLists.txt  bezierLight.cpp  bezierLight.h  common.h  constants.h  ltc.inc  ltc2.inc  ltcSurface.cpp  ltcSurface.h  main.cpp  openmp.h  render.cpp  render.h
src/glad/: gl.h
src/imgui/: imgui_impl_opengl3.cpp
src/stb/: stb_image.h
src/tinyobjloader/: LICENSE
src/utils/: stb_image_write.h  tiny_obj_loader.h
